examples/test/testpolicy5717.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5717
  namespace: namespace439
spec:
  podSelector:
    matchLabels:
      key46: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value38
          key13: value1
          key16: value3
      podSelector:
        matchLabels:
          key42: value47
          key43: value18
